--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
     bodmer/JPEGDecoder @ ^2.0.0
     bodmer/TFT_eSPI @ ^2.5.43
     xreef/PCF8575 library @ ^1.1.2
+    background
 upload_port = COM3
 monitor_port = COM3
 monitor_speed = 115200
